<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>shop-common</module>
		<module>shop-cart</module>
		<module>sso-web</module>
		<module>shop-demo</module>
		<module>shop-eureka</module>
		<module>shop-gateway</module>
		<module>shop-mbg</module>
		<module>shop-monitor</module>
		<module>shop-order</module>
		<module>shop-protal</module>
		<module>shop-search</module>
		<module>shop-seckill</module>
		<module>shop-activiti</module>
    </modules>
    <parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>shop</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>shop</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<skipTests>true</skipTests>
		<docker.host>http://192.168.1.149:2375</docker.host>
		<docker.maven.plugin.version>0.40.0</docker.maven.plugin.version>
		<java.version>1.8</java.version>
		<spring-boot.version>2.7.0</spring-boot.version>
		<spring-cloud.version>2021.0.3</spring-cloud.version>
		<spring-cloud-alibaba.version>2021.0.1.0</spring-cloud-alibaba.version>
		<spring-cloud-starter-oauth2.version>2.2.5.RELEASE</spring-cloud-starter-oauth2.version>
		<pagehelper-starter.version>1.4.2</pagehelper-starter.version>
		<pagehelper.version>5.3.0</pagehelper.version>
		<druid.version>1.2.9</druid.version>
		<!--<hutool.version>5.8.0</hutool.version>-->
		<mybatis-generator.version>1.4.1</mybatis-generator.version>
		<mybatis.version>3.5.9</mybatis.version>
		<mysql-connector.version>8.0.29</mysql-connector.version>
		<spring-data-commons.version>2.7.0</spring-data-commons.version>
		<jjwt.version>0.9.1</jjwt.version>
		<aliyun-oss.version>2.5.0</aliyun-oss.version>
		<logstash-logback.version>5.3</logstash-logback.version>
		<admin-starter-server.version>2.7.0</admin-starter-server.version>
		<minio.version>8.4.1</minio.version>
		<!--<knife4j.version>3.0.3</knife4j.version>-->
		<nimbus-jose-jwt.version>9.23</nimbus-jose-jwt.version>
		<shop-common.version>1.0-SNAPSHOT</shop-common.version>
		<shop-mbg.version>1.0-SNAPSHOT</shop-mbg.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-web</artifactId>-->
<!--		</dependency>-->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<!--Spring Cloud 相关依赖-->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!--Spring Cloud Alibaba 相关依赖-->
			<dependency>
				<groupId>com.alibaba.cloud</groupId>
				<artifactId>spring-cloud-alibaba-dependencies</artifactId>
				<version>${spring-cloud-alibaba.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!--MyBatis分页插件starter-->
			<dependency>
				<groupId>com.github.pagehelper</groupId>
				<artifactId>pagehelper-spring-boot-starter</artifactId>
				<version>${pagehelper-starter.version}</version>
			</dependency>
			<!--MyBatis分页插件-->
			<dependency>
				<groupId>com.github.pagehelper</groupId>
				<artifactId>pagehelper</artifactId>
				<version>${pagehelper.version}</version>
			</dependency>
			<!--集成druid连接池-->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>druid-spring-boot-starter</artifactId>
				<version>${druid.version}</version>
			</dependency>
			<!-- MyBatis 生成器 -->
			<dependency>
				<groupId>org.mybatis.generator</groupId>
				<artifactId>mybatis-generator-core</artifactId>
				<version>${mybatis-generator.version}</version>
			</dependency>
			<!-- MyBatis-->
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>${mybatis.version}</version>
			</dependency>

			<!--Mysql数据库驱动-->
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql-connector.version}</version>
			</dependency>
			<!--SpringData工具包-->
			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-commons</artifactId>
				<version>${spring-data-commons.version}</version>
			</dependency>
			<!--JWT(Json Web Token)登录支持-->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<!--JWT(Json Web Token)登录支持-->
			<dependency>
				<groupId>com.nimbusds</groupId>
				<artifactId>nimbus-jose-jwt</artifactId>
				<version>${nimbus-jose-jwt.version}</version>
			</dependency>
			<!--集成logstash-->
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback.version}</version>
			</dependency>
			<!--集成SpringBoot Admin监控-->
			<dependency>
				<groupId>de.codecentric</groupId>
				<artifactId>spring-boot-admin-starter-server</artifactId>
				<version>${admin-starter-server.version}</version>
			</dependency>
			<dependency>
				<groupId>com.example</groupId>
				<artifactId>com.example.mapper</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.example</groupId>
				<artifactId>shop-common</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring-boot.version}</version>
				</plugin>
				<plugin>
					<groupId>io.fabric8</groupId>
					<artifactId>docker-maven-plugin</artifactId>
					<version>${docker.maven.plugin.version}</version>
					<executions>
						<!--如果想在项目打包时构建镜像添加-->
						<execution>
							<id>build-image</id>
							<phase>package</phase>
							<goals>
								<goal>build</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<!-- Docker 远程管理地址-->
						<dockerHost>${docker.host}</dockerHost>
						<images>
							<image>
								<!--定义镜像名称-->
								<name>mall/${project.name}:${project.version}</name>
								<!--定义镜像构建行为-->
								<build>
									<!--定义基础镜像-->
									<from>java:8</from>
									<args>
										<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
									</args>
									<!--定义哪些文件拷贝到容器中-->
									<assembly>
										<!--定义拷贝到容器的目录-->
										<targetDir>/</targetDir>
										<!--只拷贝生成的jar包-->
										<descriptorRef>artifact</descriptorRef>
									</assembly>
									<!--定义容器启动命令-->
									<entryPoint>["java", "-jar","-Dspring.profiles.active=prod","/${project.build.finalName}.jar"]</entryPoint>
									<!--定义维护者-->
									<maintainer>macrozheng</maintainer>
								</build>
							</image>
						</images>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

</project>
